# pi-wifi-repeater

./: README.md  pyproject.toml
drivers/aic8800/: Makefile  Module.symvers  dkms.conf  driverctl  modules.order
drivers/aic8800/aic8800_fdrv/: .modules.order.cmd  Makefile  rwnx_rx.c
drivers/aic8800/aic_load_fw/: .modules.order.cmd  Makefile
scripts/: install.sh  install_driver.sh  setup.py  setup_vpn.py
src/pi_wifi_repeater/: __init__.py  cli.py
